client/scss/main.scss
$padding_left: 30px;
$margin-right: 15px;
$margin-top: 30px;
$margin-bottom: 10px;
$font_size: 30px;
$link_color: #191970;
$footer_height: 50px;
$footer_background:#D3D3D3;
$page_title_background_color:#D3D3D3;
$padding_bottom: 50px;
$hundred: 100%;
$message_board_height: 400px;

#email-list {
    min-height: 707px;
}
.no_spacing{
  margin-bottom: 2px;
}
.span_spacing{
  margin-right: 10px;
}
.remove-bottom-padding{
  padding-bottom: 0px
}

.bottom-align{
  position: relative;
  min-height: 100px;
}

.space_link{
  word-spacing: 10px;
}

.space {
  margin-right: 5px;
}

.blue{
  color: #039be5
}

.tooltipp {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
    .tooltipptext {
        visibility: hidden;
        width: 120px;
        background-color: black;
        color: #fff;
        text-align: center;
        border-radius: 6px;
        padding: 5px 0;
        top: 120%;
        left: 50%;
        margin-left: -60px;
        /* Position the tooltip */
        position: absolute;
        z-index: 1;
    }
}

.tooltipp:hover .tooltipptext {
    visibility: visible;
}

.collection {
  .collection-item{
    .avatar {
      min-height: 0px !important;
    }
  }
}
.group-channel {
    padding-left: 10px !important;
    font-weight: 400;
}
.secondary-content {
    top: 9px !important;
}

.group-collection {
    padding-left: 10px !important;
    font-weight: 600;
}

span{
  .bad{
    .new {
      font-weight: 300;
      font-size: 1.1rem;
      color: #fff;
      background-color: #c24141;
      border-radius: 40px;
      padding-left: 10px;
      padding-right: 10px;
    }
  }
}

span{
  .bad {
    margin-left: 14px;
    text-align: center;
    font-size: 1.3rem;
    line-height: 24px;
    height: 25px;
    color: #757575;
    float: right;
    box-sizing: border-box;
  }
}

.my_title{
  padding-left: $padding_left;
  font-size: $font_size;
  img{
    margin-right: $margin-right;
    float: left;
  }

}

textarea {
   resize: none;
}

a:link{
  text-decoration: none;
}

a:hover{
  font-weight: bold;
}

.image{
  margin-right: $margin-right;
  float: left;
}

.big-font{
  font-size: $font_size - 5;
}

.bold-black-link{
  margin-top: $margin-top;
  a{
    color: $link_color;
    text-decoration: underline;
    font-weight: bold;
    font-style: italic;
    margin-bottom: $margin-bottom;

  }
}

html {
    position: relative;
    min-height: 100%;
}

body {
   margin:0;
   padding:0;
   height:$hundred;
}

.content{
   min-height: 100%;
   height:$hundred;
   position:relative;
   padding-bottom: $padding_bottom;
}

.footer{
    bottom: 0;
    position: fixed;
    width:$hundred;
    height:$footer_height;
    background:$footer_background;
}

.side-menu{
  padding: 0px 0px 5px 0px;
}

.page-title{
  background-color: $page_title_background_color;
  padding: 5px 8px 5px 8px;
  margin-bottom: $margin-bottom;
  font-weight: bold;
}

.message_board{
  height:$message_board_height;
  line-height:2em;
  overflow: auto ;
  padding:5px;
}

.group{
  position: relative;
}

.message_board{
  height:300px;
  overflow-y: scroll;
  overflow-x: hidden;
  position: relative;
}

.group_board{
  max-height:300px;
  min-height: 20px;
  overflow-y: scroll;
  overflow-x: hidden;
  position: relative;
}

.bottom_of_message{
  bottom: 0px;
  height:100px;
  position: absolute;
}

.padding-right{
  padding-right: 30px;
}

#snackbar{
  visibility: hidden; 
  min-width: 150px; 
  background-color: #333; 
  color: #fff; 
  text-align: center; 
  border-radius: 10px;
  padding: 10px; 
  position: fixed; 
  z-index: 1; 
}

#snackbar.show {
  visibility: visible; /* Show the snackbar */
}

[type="radio"]:not(:checked)+label, [type="radio"]:checked+label {
  margin-right: 1rem;
  padding-left: 25px;
}

.pad-footer-text {
  padding-top: 15px;
}

